tests/NormalTests/paczka1/small_fuzzy/36356302.err
Error in line 5: Iaq S782 39,6
Error in line 2: RpC S424 20,4
Error in line 7: RpC S649 11,8
Error in line 3: mlyJcOXD S649 28,8
Error in line 13: Iaq S782 84,8
